--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rentagameclient",
   "version": "0.1.0",
   "private": true,
-  "engines": {"node": ">=12"},
+  "engines": {"node": "16.13.0"},
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
